lesson1 the end

--- a/lesson1/app/src/main/res/layout/activity_main.xml
+++ b/lesson1/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="16dp"
+    android:background="@android:color/white">
 
-    <!-- Текстовое поле для отображения количества пассажиров -->
-    <TextView
-        android:id="@+id/passengerCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="48sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
 
-    <!-- Кнопка Уменьшить -->
-    <Button
-        android:id="@+id/buttonMinus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="-"
-        android:layout_below="@id/passengerCount"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:enabled="false"/>
-
-    <!-- Кнопка Увеличить -->
-    <Button
-        android:id="@+id/buttonPlus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
-        android:layout_below="@id/passengerCount"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="20dp"/>
-
-    <!-- Кнопка Сброс -->
     <Button
         android:id="@+id/buttonReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Сброс"
-        android:layout_below="@id/buttonMinus"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"/>
+        android:textSize="16sp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:elevation="4dp"
+        android:padding="10dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</RelativeLayout>
+
+    <TextView
+        android:id="@+id/seatsLeftMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Мест осталось: 49"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/buttonReset"
+        app:layout_constraintBottom_toTopOf="@+id/passengerCount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <TextView
+        android:id="@+id/passengerCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <Button
+        android:id="@+id/buttonMinus"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:text="-"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:background="@drawable/rounded_button"
+        android:elevation="4dp"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp" />
+
+
+    <Button
+        android:id="@+id/buttonPlus"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:text="+"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:background="@drawable/rounded_button"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
